--- a/dashboard/apps/editor.fma/index.html
+++ b/dashboard/apps/editor.fma/index.html
@@ -40,18 +40,10 @@
 <body>
 <nav class="top-bar" data-topbar role="navigation" data-options="is_hover: false">
  <div class="top-bar-left">
-
-   <ul class="title-area">
-      <li class="name">
-        <h1><a id="app-header" class="noselect">Editor</a></h1>
-      </li>
-      <!-- rmackie <li class="toggle-topbar"><a href="#"><span>Menu</span></a></li>  -->
-    </ul>
-
     <ul class="dropdown menu" data-dropdown-menu data-click-open="true" data-close-on-click="true">
-<!--		<li class="menu-text"> 
-			<a href="#"> Menu </a>
-		</li> -->
+		<li class="menu-text"> 
+			<a id="app-header" href="#"> Editor </a>
+		</li>
 		<li>
 			<a href "#"> Macro </a>
 			<ul class="menu vertical">
@@ -78,10 +70,6 @@
   </div> <!-- end top-bar-left -->
 
   <div class="top-bar-right">
-	<ul class="menu">
-		<li><input type="search" placeholder="Search"></li>
-		<li> <button type="button" class="button"> Search </button></li>
-	</ul>
   </div> <!-- end top-bar-right -->
 
 </nav> <!-- end of top-bar -->
@@ -89,6 +77,6 @@
   <div id="editor"></div>
 
   <script src="../../editor.js"></script>
-
+  <script> $(window).foundation(); <script>
 </body>
 </html>
