--- a/dashboard/apps/editor.fma/index.html
+++ b/dashboard/apps/editor.fma/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/codemirror.css">
   <link rel="stylesheet" href="./css/syntax.css">
+  <link rel="stylesheet" href="./css/foundation.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <div id="jobsubmit-modal" class="reveal-modal medium" data-reveal>
@@ -39,43 +40,51 @@
 </head>
 <body>
 <!-- START HERE -->
-<nav class="top-bar" data-topbar role="navigation" data-options="is_hover: false">
- <div class="top-bar-left">
-    <ul class="dropdown menu" data-dropdown-menu data-click-open="true" data-close-on-click="true">
-		<li class="menu-text"> 
-			<a id="app-header" href="#"> Editor </a>
-		</li>
-		<li>
-			<a href "#"> Macro </a>
-			<ul class="dropdown menu" data-dropdown-menu>
-            	<li><a id="macro-save" href="#macrosave">Save</a></li>
-            	<li><a id="macro-save-and-close" href="#macrosaveandclose">Save and Close</a></li>
-			</ul>
-		</li>
-		<li> 
-			<a href="#"> Language </a>
-			<ul class="dropdown menu" data-dropdown-menu>
-				<li> <a id="lang-opensbp" href="#languageopensbp"> OpenSBP </a> </li>
-				<li> <a id="lang-gcode" href="#languagegcode"> G-Code </a> </li>
-			</ul>
-		</li>
-		<li id="#execute-menu" class="#execute-menu"> 
-			<a href="#"> Execute </a>
-			<ul class="dropdown menu" data-dropdown-menu>
-				<li> <a id="submit-immediate" href="#submitimmediate"> Run Immediately (Ctrl+Enter) </a> </li>
-				<li> <a id="submit-job" href="#submitjob"> Submit as Job </a> </li>
-			</ul>
-		</li>
-
-	</ul> <!-- end of dropdown menu -->
-  </div> <!-- end top-bar-left -->
-
+<div class="top-bar" style="background-color:rgb(92, 90, 90)">
+  <div class="top-bar-left">
+            <ul style="background-color:rgb(92, 90, 90);color:white;" class="dropdown menu" data-dropdown-menu data-click-open>
+              <li> <a style="color:white;" href="#macromenu">Macro</a>
+                  <ul class="menu">
+                      <li><a id="macro-save" href="#macrosave">Save</a></li>
+                      <li>
+                          <a id="macro-save-and-close" 
+                             href="#macrosaveandclose">Save and Close</a>
+                      </li>
+                  </ul>
+              </li>
+              <li>
+                  <a style="color:white;" href="#languagemenu">Language</a>
+                  <ul class="menu">
+                      <li><a id="lang-opensbp" href="#languageopensbp">OpenSBP</a></li>
+                      <li><a id="lang-gcode" href="#language-gcode">G-Code</a></li>
+                  </ul>
+              </li>
+              <li><a style="color:white;" href="#executemenu">Execute</a>
+                   <ul class="menu">
+                      <li><a id="submit-immediate" 
+                             href="#submitimmediate">Run Immediately (Ctrl+Enter)</a>
+					  </li>
+                      <li><a id="submit-job" href="#">Submit as Job</a></li>
+                  </ul>
+             </li>
+            </ul>
+  </div>
   <div class="top-bar-right">
-  </div> <!-- end top-bar-right -->
-
-</nav> <!-- end of top-bar -->
-
-  <div id="editor"></div>
+<!--
+    <ul class="menu">
+      <li><input type="search" placeholder="Search"></li>
+      <li><button type="button" class="button">Search</button></li>
+    </ul>
+-->
+  </div>
+</div>
+<div>
+</div>
+	<h1 id="app-header"> Editor </h1>
+	<div>
+		<div id="editor">
+	</div>
+</div>
 
   <script src="../../editor.js"></script>
   <script> $(window).foundation(); <script>
