Removing some commented out code

--- a/dashboard/apps/editor.fma/index.html
+++ b/dashboard/apps/editor.fma/index.html
@@ -43,7 +43,7 @@
 <div class="top-bar" style="background-color:rgb(92, 90, 90)">
   <div class="top-bar-left">
             <ul style="background-color:rgb(92, 90, 90);color:white;" class="dropdown menu" data-dropdown-menu data-click-open>
-              <li> <a style="color:white;" href="#macromenu">Macro</a>
+              <li id="macro-menu" class="hidden"> <a style="color:white;" href="#macromenu">Macro</a>
                   <ul class="menu">
                       <li><a id="macro-save" href="#macrosave">Save</a></li>
                       <li>
@@ -70,12 +70,6 @@
             </ul>
   </div>
   <div class="top-bar-right">
-<!--
-    <ul class="menu">
-      <li><input type="search" placeholder="Search"></li>
-      <li><button type="button" class="button">Search</button></li>
-    </ul>
--->
   </div>
 </div>
 <div>
