Menus for the Macro tab and some superstitious attributes in the editor

--- a/dashboard/apps/editor.fma/index.html
+++ b/dashboard/apps/editor.fma/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
 <!-- START HERE -->
-<div class="top-bar" style="background-color:rgb(92, 90, 90)">
+<nav class="top-bar" data-topbar role="navigation" style="background-color:rgb(92, 90, 90)">
   <div class="top-bar-left">
             <ul style="background-color:rgb(92, 90, 90);color:white;" class="dropdown menu" data-dropdown-menu data-click-open>
               <li id="macro-menu" class="hidden"> <a style="color:white;" href="#macromenu">Macro</a>
@@ -71,7 +71,7 @@
   </div>
   <div class="top-bar-right">
   </div>
-</div>
+</nav>
 <div>
 </div>
 	<h1 id="app-header"> Editor </h1>
