--- a/dashboard/apps/macro_manager.fma/index.html
+++ b/dashboard/apps/macro_manager.fma/index.html
@@ -3,25 +3,28 @@
         <meta charset="utf-8">
         <title>Macro Manager</title>
         <link rel="stylesheet" href="../../css/dashboard.css">
-	      <link rel="stylesheet" href="./css/style.css">
+	    <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/foundation.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+           .test_rob:hover {
+                color:white;
+                background-color:rgb(72, 70, 70);
+            }
+            .test_rob {
+                color:white;
+                background-color:rgb(92, 90, 90);
+            }
+        </style>
     </head>
     <body>
-        <section class="top-bar-section">
-        <nav class="top-bar" data-topbar role="navigation">
-          <ul class="title-area">
-            <li class="name">
-              <h1><a id="app-header" href="">Macros</a></h1>
-            </li>
-            <li class="toggle-topbar"><a href="#"><span>Menu</span></a></li>
-          </ul>
-          <section class="top-bar-section">
-            <ul class="left">
-              <li><a id="macro-new" href="#">Create new macro...</a></li>
-            </ul>
-          </section>
+        <nav class="top-bar" data-topbar role="navigation" style="background-color:rgb(92, 90, 90)">
+            <div class="top-bar-left">
+                <ul class="menu" style="background-color:rgb(92, 90, 90);color:white;">
+                    <a id="app-header" style="background-color:rgb(92, 90, 90);color:white;" href="#">Macros</a>
+                    <li class="test_rob"><a class="test_rob" id="macro-new" href="#">Create new macro...</a></li>
+                </ul>
         </nav>
-        </section>
         <section class="container">
                 <table class="small-12 columns" style="width:100%" id="macro_table">
                 <tbody id="macro_table_body"></tbody>
