--- a/dashboard/apps/macro_manager.fma/index.html
+++ b/dashboard/apps/macro_manager.fma/index.html
@@ -7,11 +7,11 @@
         <link rel="stylesheet" href="./css/foundation.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
-           .test_rob:hover {
+           .fabmo-menu:hover {
                 color:white;
                 background-color:rgb(72, 70, 70);
             }
-            .test_rob {
+            .fabmo-menu {
                 color:white;
                 background-color:rgb(92, 90, 90);
             }
@@ -21,8 +21,8 @@
         <nav class="top-bar" data-topbar role="navigation" style="background-color:rgb(92, 90, 90)">
             <div class="top-bar-left">
                 <ul class="menu" style="background-color:rgb(92, 90, 90);color:white;">
-                    <a id="app-header" style="background-color:rgb(92, 90, 90);color:white;" href="#">Macros</a>
-                    <li class="test_rob"><a class="test_rob" id="macro-new" href="#">Create new macro...</a></li>
+                    <a id="app-header" class="fabmo-menu" href="#">Macros</a>
+                    <li class="fabmo-menu"><a class="fabmo-menu" id="macro-new" href="#">Create new macro...</a></li>
                 </ul>
         </nav>
         <section class="container">
